// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateErrorTypes > always produces ApiError and UnspecifiedApiError classes even with empty operations 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}
"
`;

exports[`generateErrorTypes > does not emit DefaultErrorBody when no operation uses default response 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type getApiV1ItemsError404 = NotFoundError;
export type getApiV1ItemsErrors = ApiError<404, getApiV1ItemsError404>
  | UnspecifiedApiError;"
`;

exports[`generateErrorTypes > does not include success responses in error types 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type getApiV1StatusError500 = ServerError;
export type getApiV1StatusErrors = ApiError<500, getApiV1StatusError500>
  | UnspecifiedApiError;"
`;

exports[`generateErrorTypes > formats multi-branch error unions with pipe on new lines 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type getApiV1OrdersError400 = BadRequest;
export type getApiV1OrdersError401 = Unauthorized;
export type getApiV1OrdersError403 = Forbidden;
export type getApiV1OrdersErrors = ApiError<400, getApiV1OrdersError400>
  | ApiError<401, getApiV1OrdersError401>
  | ApiError<403, getApiV1OrdersError403>
  | UnspecifiedApiError;"
`;

exports[`generateErrorTypes > generates ApiError class 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}
"
`;

exports[`generateErrorTypes > generates UnspecifiedApiError class 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}
"
`;

exports[`generateErrorTypes > generates error types for multiple operations 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type getApiV1ProductsError404 = NotFoundError;
export type getApiV1ProductsErrors = ApiError<404, getApiV1ProductsError404>
  | UnspecifiedApiError;

export type postApiV1UsersError400 = ValidationError;
export type postApiV1UsersError409 = ConflictError;
export type postApiV1UsersErrors = ApiError<400, postApiV1UsersError400>
  | ApiError<409, postApiV1UsersError409>
  | UnspecifiedApiError;"
`;

exports[`generateErrorTypes > generates error union for operation with multiple error status codes 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type getApiV1ProductsError400 = BadRequestError;
export type getApiV1ProductsError404 = NotFoundError;
export type getApiV1ProductsError500 = InternalServerError;
export type getApiV1ProductsErrors = ApiError<400, getApiV1ProductsError400>
  | ApiError<404, getApiV1ProductsError404>
  | ApiError<500, getApiV1ProductsError500>
  | UnspecifiedApiError;"
`;

exports[`generateErrorTypes > handles default response with DefaultErrorBody 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type postApiV1UsersError400 = ValidationError;
export type postApiV1UsersErrors = ApiError<400, postApiV1UsersError400>
  | ApiError<number, DefaultErrorBody>
  | UnspecifiedApiError;

export type DefaultErrorBody = unknown;"
`;

exports[`generateErrorTypes > handles operation with only default error response 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type patchApiV1SettingsErrors = ApiError<number, DefaultErrorBody>
  | UnspecifiedApiError;

export type DefaultErrorBody = unknown;"
`;

exports[`generateErrorTypes > includes catch-all UnspecifiedApiError in error unions 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type deleteApiV1ProductsError404 = NotFoundError;
export type deleteApiV1ProductsErrors = ApiError<404, deleteApiV1ProductsError404>
  | UnspecifiedApiError;"
`;

exports[`generateErrorTypes > skips operations with no error responses 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}
"
`;

exports[`generateErrorTypes > skips operations with only success responses and default 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}
"
`;

exports[`generateErrorTypes > uses methodName as prefix for error type names 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type deleteApiV1UsersByUserIdError404 = UserNotFoundError;
export type deleteApiV1UsersByUserIdErrors = ApiError<404, deleteApiV1UsersByUserIdError404>
  | UnspecifiedApiError;"
`;

exports[`generateErrorTypes > uses unknown when tsType is empty 1`] = `
"export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}


export type putApiV1ConfigError400 = unknown;
export type putApiV1ConfigErrors = ApiError<400, putApiV1ConfigError400>
  | UnspecifiedApiError;"
`;
